# joogle

./: .gitignore  AGENTS.md  Cargo.toml  README.md  architecture.md  compose.dev.yml  compose.yml  deno.json  goal.txt  index.html  iochi_mari.html  plan.md  playwright.config.ts  stat.sh  vite.config.ts  vitest.config.ts
.github/workflows/: ci.yml  deploy.yml
docs/: cloudflare-tunnel.md
e2e/: joogle.spec.ts
ops/cloudflared/: config.example.yml
ops/containers/: Containerfile.prod  Containerfile.server.dev  Containerfile.web.dev
public/: manifest.json  sw.js
server/: Cargo.toml
server/src/: clicks.rs  lib.rs  main.rs  student_ids.rs
src/: app.tsx
src/components/EasterEggOverlay/: EasterEggOverlay.css
src/components/Footer/: Footer.tsx
src/components/LanguageSwitch/: LanguageSwitch.css  LanguageSwitch.tsx
src/components/Logo/: Logo.css  Logo.test.tsx  Logo.tsx
src/components/SearchBar/: SearchBar.css  SearchBar.test.tsx  SearchBar.tsx
src/components/SearchButton/: SearchButton.css  SearchButton.tsx
src/components/SearchFilters/: SearchFilters.tsx
src/components/VoiceSearch/: VoiceSearch.tsx
src/data/: blueArchive.ts
src/hooks/: useKeyboardShortcuts.ts
src/pages/Home/: Home.css  (+1 more)
src/services/: search.test.ts  search.ts
src/stores/: easter.test.ts  easter.ts  filters.ts  locale.test.ts  locale.ts  search.ts  theme.ts
src/styles/: global.css
web/: architecture.md  deno.json  index.html  plan.md  playwright.config.ts  vite.config.ts  vitest.config.ts
web/e2e/: joogle.spec.ts
web/public/: manifest.json
web/src/: app.tsx  main.tsx
(+30 files in other folders)
