[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.6", features = ["http1", "json", "macros", "tokio", "ws"] }
bincode = { version = "2.0.1", features = ["serde"] }
dashmap = "6.1.0"
futures-util = "0.3.31"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["fs", "macros", "rt-multi-thread", "signal", "sync", "time"] }
tower-http = { version = "0.6.6", features = ["compression-gzip", "cors", "fs", "limit", "trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt"] }
